--- a/todo.html
+++ b/todo.html
@@ -153,6 +153,8 @@
                 <li><a href="chapters/chapter24.html">Ch 24: Respiratory</a></li>
                 <li><a href="chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="labs/lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
+                <li><a href="final-review.html" class="nav-final">Final Review</a></li>
                 <li><a href="todo.html" class="nav-todo active">Site Status</a></li>
                 <li><a href="practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
@@ -167,16 +169,6 @@
 
         <h3 class="section-label">In Progress</h3>
         <ul class="todo-list">
-            <li class="todo-item in-progress">
-                <span class="todo-text">Final Review</span>
-                <span class="todo-status in-progress">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="10"/>
-                        <path d="M12 6v6l4 2"/>
-                    </svg>
-                    In Progress
-                </span>
-            </li>
         </ul>
 
         <h3 class="section-label">Planned</h3>
@@ -185,6 +177,16 @@
 
         <h3 class="section-label">Completed</h3>
         <ul class="todo-list">
+            <li class="todo-item completed">
+                <span class="todo-text">Final Review - Comprehensive review page for all chapters</span>
+                <span class="todo-status completed">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                        <polyline points="22 4 12 14.01 9 11.01"/>
+                    </svg>
+                    Completed
+                </span>
+            </li>
             <li class="todo-item completed">
                 <span class="todo-text">Adding content for rest of lab exercises + metabolic tests for Thursday Lab Exam</span>
                 <span class="todo-status completed">
