--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -714,6 +714,7 @@
                 <li><a href="../chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="../chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
                 <li><a href="lab-exam-2-review.html" class="nav-lab active">Lab Exam 2</a></li>
+                <li><a href="../final-review.html" class="nav-final">Final Review</a></li>
                 <li><a href="../todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="../practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
