--- a/practice.html
+++ b/practice.html
@@ -596,14 +596,7 @@
                 </svg>
             </button>
             <ul class="navbar-nav">
-                <li><a href="chapters/chapter21.html">Ch 21: Skin</a></li>
-                <li><a href="chapters/chapter22.html">Ch 22: Nervous</a></li>
-                <li><a href="chapters/chapter24.html">Ch 24: Respiratory</a></li>
-                <li><a href="chapters/chapter25.html">Ch 25: Digestive</a></li>
-                <li><a href="chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
-                <li><a href="labs/lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
                 <li><a href="final-review.html" class="nav-final">Final Review</a></li>
-                <li><a href="todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="practice.html" class="nav-highlight active">Practice Test</a></li>
             </ul>
         </div>
@@ -630,27 +623,11 @@
             <h2>Configure Your Test</h2>
 
             <div class="setup-section">
-                <h3>Select Chapters to Include</h3>
+                <h3>Question Bank</h3>
                 <div class="chapter-checkboxes">
                     <label class="chapter-checkbox">
-                        <input type="checkbox" value="21" checked>
-                        <span>Ch 21: Skin</span>
-                    </label>
-                    <label class="chapter-checkbox">
-                        <input type="checkbox" value="22" checked>
-                        <span>Ch 22: Nervous</span>
-                    </label>
-                    <label class="chapter-checkbox">
-                        <input type="checkbox" value="24" checked>
-                        <span>Ch 24: Respiratory</span>
-                    </label>
-                    <label class="chapter-checkbox">
-                        <input type="checkbox" value="25" checked>
-                        <span>Ch 25: Digestive</span>
-                    </label>
-                    <label class="chapter-checkbox">
-                        <input type="checkbox" value="26" checked>
-                        <span>Ch 26: Urinary/Repro</span>
+                        <input type="checkbox" value="final" checked>
+                        <span>Final Review</span>
                     </label>
                 </div>
             </div>
