--- a/practice.html
+++ b/practice.html
@@ -623,13 +623,11 @@
             <h2>Configure Your Test</h2>
 
             <div class="setup-section">
-                <h3>Question Bank</h3>
-                <div class="chapter-checkboxes">
-                    <label class="chapter-checkbox">
-                        <input type="checkbox" value="final" checked>
-                        <span>Final Review</span>
-                    </label>
-                </div>
+                <h3> Final Review V2</h3>
+                <p style="font-size: 0.9em; color: var(--text-secondary);">
+                    Version 2 added 12/15 @ 6PM - This new version of the practice test feels more comprehensive than the last one. :>
+                </p>
+                <input type="hidden" class="chapter-checkbox" value="finalv2" checked>
             </div>
 
             <div class="setup-section">
