--- a/final-review.html
+++ b/final-review.html
@@ -289,6 +289,54 @@
             margin-bottom: 0.5rem;
         }
 
+        /* Update Notification Banner */
+        .update-banner {
+            background: linear-gradient(135deg, rgba(6, 182, 212, 0.15) 0%, rgba(139, 92, 246, 0.15) 100%);
+            border: 1px solid rgba(6, 182, 212, 0.4);
+            border-radius: var(--radius);
+            padding: 1rem 1.25rem;
+            margin-bottom: 2rem;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .update-banner-icon {
+            font-size: 1.5rem;
+            flex-shrink: 0;
+        }
+
+        .update-banner-content {
+            flex: 1;
+        }
+
+        .update-banner-content strong {
+            color: var(--primary);
+        }
+
+        .update-banner-content p {
+            margin: 0;
+            color: var(--text-secondary);
+            font-size: 0.95rem;
+        }
+
+        .update-banner-link {
+            background: var(--primary);
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: var(--radius-sm);
+            font-weight: 500;
+            font-size: 0.9rem;
+            text-decoration: none;
+            transition: var(--transition);
+            white-space: nowrap;
+        }
+
+        .update-banner-link:hover {
+            background: var(--primary-dark);
+            transform: translateY(-1px);
+        }
+
         /* Image Placeholder */
         .image-placeholder {
             background: linear-gradient(135deg, var(--surface-hover) 0%, var(--surface) 100%);
@@ -581,6 +629,15 @@
 
         <!-- Main Content -->
         <main class="review-content">
+            <!-- Update Banner -->
+            <div class="update-banner">
+                <span class="update-banner-icon">NEW</span>
+                <div class="update-banner-content">
+                    <p><strong>Practice Test V2</strong> is now available! This updated version is more comprehensive than the previous one.</p>
+                </div>
+                <a href="practice.html" class="update-banner-link">Try It Now</a>
+            </div>
+
             <!-- Chapter 1: Introduction to Microbiology -->
             <section id="ch1" class="chapter-section">
                 <div class="chapter-header-bar">
